# Whiskypy

./: README.md  pyproject.toml  setup.py
tests/: test1.py
whiskypy/: __init__.py  auth.py  cli.py  decorators.py  openwhisk.py  whiskypy.py
