[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "whiskypy"
version = "0.0.1"
authors = [
  { name="Matteo Cipolla", email="matcip@hotmail.com" },
]
description = "A Python openwhisk wrapper"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"